--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "hugoscroll"]
   path = themes/hugoscroll
-  url = git://github.com/rocknrollmarc/hugo-blog-rocknrollmarc.git
+  url = https://github.com/rocknrollMarc/hugoscroll.git
+
 
